Wed Nov 16 09:05:08 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Current.h (Current):

	  Removed "const" qualifier for tss_slot_ member.  It must
	  currently remain mutable.

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_OpenSSL_st_T.h:

	  Include "tao/Versioned_Namespace.h" to pull in versioned
	  namespace macro definitions.

Wed Nov 16 14:52:32 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/NestedUpcall/Simple/Simple.mpc:
        
          Added 'after' line to one of the two projects in the MPC file,
          so VC8 doesn't execute the IDL compiler concurrently.

Tue Nov 15 23:48:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile.am:
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_SSL.cpp:
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_X509.cpp:
	* orbsvcs/orbsvcs/Sched/Reconfig_Scheduler.cpp:

	  Removed empty files.

	* orbsvcs/orbsvcs/ETCL/ETCL.ll:
	* orbsvcs/orbsvcs/ETCL/ETCL.yy:
	* orbsvcs/orbsvcs/ETCL/ETCL_l.cpp:
	* orbsvcs/orbsvcs/ETCL/ETCL_y.cpp:

  	  Added missing versioned namespace macros.
	
	* orbsvcs/orbsvcs/Property/CosPropertyService_i.cpp:
	* orbsvcs/orbsvcs/Property/CosPropertyService_i.h:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.cpp:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.h:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.cpp:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.h:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.i:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.cpp:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.h:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.i:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Acceptor.cpp:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Acceptor.h:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connection_Handler.cpp:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connection_Handler.inl: